tests/whiley/valid/test_1677.wyal
define f_requires_0(int x) is:
    x > 0


assert "precondition not satisfied":
    if:
        true
    then:
        f_requires_0(1)


