tests/whiley/invalid/test_46.wyal
define f_requires_0(int x) is:
    (x + 1) > 0


assert "precondition not satisfied":
    if:
        true
    then:
        f_requires_0(-1)


